fix(ingestion): treat whitespace-only input as absent, use defaults
- DataIngestionService: isNotBlank/trim for keyword and category; isNotBlank for title
- ArticleValidator: isBlank for title (reject blank)
- NewsApiArticleMapper: isNotBlank and trim for category
- Update DataIngestionServiceTest and NewsApiArticleMapperTest for new behavior